<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/allNewsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toTopOf="@id/nationalNewsButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_margin="6dp"
        android:text="@string/top_headlines" />
    <Button
        android:id="@+id/nationalNewsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_margin="6dp"
        app:layout_constraintBottom_toTopOf="@id/entertainmentNewsButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/national_news" />
    <Button
        android:id="@+id/entertainmentNewsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/businessNewsButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_margin="6dp"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/entertainment_news" />
    <Button
        android:id="@+id/businessNewsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/sportsNewsButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_margin="6dp"
        android:text="@string/business_news" />
    <Button
        android:id="@+id/sportsNewsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_margin="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/sports_news" />
    <Button
        android:id="@+id/globalNewsButton"
        android:layout_width="200dp"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_margin="6dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sportsNewsButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/global_news" />
    <Button
        android:id="@+id/politicalNewsButton"
        android:layout_width="200dp"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_margin="6dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/globalNewsButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/political_news" />
    <Button
        android:id="@+id/techNewsButton"
        android:layout_width="200dp"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_margin="6dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/politicalNewsButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/tech_news" />
    <Button
        android:id="@+id/autoNewsButton"
        android:layout_width="200dp"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:layout_margin="6dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/techNewsButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/automobile_news" />


</androidx.constraintlayout.widget.ConstraintLayout>